Enjoy toooting! This version includes following improvements and fixes:
- Fix poll notifications wrongly greyed out