@@ -1,7 +1,6 @@
 import Button from '@components/Button'
 import haptics from '@components/haptics'
 import { removeAccount, useGlobalStorage } from '@utils/storage/actions'
-import { StyleConstants } from '@utils/styles/constants'
 import React from 'react'
 import { useTranslation } from 'react-i18next'
 import { Alert } from 'react-native'
@@ -15,11 +14,6 @@ const Logout: React.FC = () => {
     <Button
       type='text'
       content={t('screenTabs:me.root.logout.button')}
-      style={{
-        marginHorizontal: StyleConstants.Spacing.Global.PagePadding * 2,
-        marginTop: StyleConstants.Spacing.Global.PagePadding,
-        marginBottom: StyleConstants.Spacing.Global.PagePadding * 2
-      }}
       destructive
       onPress={() =>
         Alert.alert(
@@ -43,6 +37,7 @@ const Logout: React.FC = () => {
           ]
         )
       }
+      style={{ flex: 1 }}
     />
   )
 }
