@@ -1,6 +1,5 @@
 import Button from '@components/Button'
 import { useNavigation } from '@react-navigation/native'
-import { StyleConstants } from '@utils/styles/constants'
 import React from 'react'
 import { useTranslation } from 'react-i18next'
 
@@ -12,11 +11,8 @@ const AccountInformationSwitch: React.FC = () => {
     <Button
       type='text'
       content={t('me.stacks.switch.name')}
-      style={{
-        marginHorizontal: StyleConstants.Spacing.Global.PagePadding * 2,
-        marginTop: StyleConstants.Spacing.Global.PagePadding
-      }}
       onPress={() => navigation.navigate('Tab-Me-Switch')}
+      style={{ flex: 1 }}
     />
   )
 }
