@@ -1,12 +1,20 @@
 import GracefullyImage from '@components/GracefullyImage'
-import haptics from '@components/haptics'
 import Icon from '@components/Icon'
+import haptics from '@components/haptics'
 import { createBottomTabNavigator } from '@react-navigation/bottom-tabs'
 import { ScreenTabsStackParamList } from '@utils/navigation/navigators'
-import { getGlobalStorage, useAccountStorage, useGlobalStorage } from '@utils/storage/actions'
+import {
+  getGlobalStorage,
+  getReadableAccounts,
+  setAccount,
+  useAccountStorage,
+  useGlobalStorage
+} from '@utils/storage/actions'
 import { useTheme } from '@utils/styles/ThemeManager'
+import { StyleConstants } from '@utils/styles/constants'
 import React from 'react'
 import { Platform, View } from 'react-native'
+import * as ContextMenu from 'zeego/context-menu'
 import TabLocal from './Local'
 import TabMe from './Me'
 import TabNotifications from './Notifications'
@@ -50,19 +58,70 @@ const ScreenTabs = () => {
               return <Icon name='bell' size={size} color={color} />
             case 'Tab-Me':
               return (
-                <View key={avatarStatic} style={{ flexDirection: 'row', alignItems: 'center' }}>
-                  <GracefullyImage
-                    sources={{ default: { uri: avatarStatic } }}
-                    dimension={{ width: size, height: size }}
-                    style={{
-                      borderRadius: 99,
-                      overflow: 'hidden',
-                      borderWidth: focused ? 2 : 0,
-                      borderColor: focused ? colors.primaryDefault : color
-                    }}
-                  />
-                  <Icon name='more-vertical' size={size / 1.5} color={colors.secondary} />
-                </View>
+                <>
+                  <ContextMenu.Root onOpenChange={() => haptics('Light')}>
+                    <ContextMenu.Trigger>
+                      <View
+                        key={avatarStatic}
+                        style={{ flexDirection: 'row', alignItems: 'center' }}
+                      >
+                        <GracefullyImage
+                          sources={{ default: { uri: avatarStatic } }}
+                          dimension={{ width: size, height: size }}
+                          style={{
+                            borderRadius: 99,
+                            overflow: 'hidden',
+                            borderWidth: focused ? 2 : 0,
+                            borderColor: focused ? colors.primaryDefault : color
+                          }}
+                        />
+                        <Icon name='more-vertical' size={size / 1.5} color={colors.secondary} />
+                      </View>
+                    </ContextMenu.Trigger>
+
+                    <ContextMenu.Content>
+                      <ContextMenu.Preview preferredCommitStyle='pop'>
+                        {() => (
+                          <View
+                            key={avatarStatic}
+                            style={{
+                              flexDirection: 'row',
+                              alignItems: 'center',
+                              padding: StyleConstants.Spacing.M
+                            }}
+                          >
+                            <GracefullyImage
+                              sources={{ default: { uri: avatarStatic } }}
+                              dimension={{ width: size, height: size }}
+                              style={{
+                                borderRadius: 99,
+                                overflow: 'hidden',
+                                borderWidth: 2,
+                                borderColor: colors.primaryDefault
+                              }}
+                            />
+                          </View>
+                        )}
+                      </ContextMenu.Preview>
+
+                      {getReadableAccounts().map(account => (
+                        <ContextMenu.CheckboxItem
+                          key={account.key}
+                          value={account.active ? 'on' : 'off'}
+                          disabled={account.active}
+                          onValueChange={async () => {
+                            if (!account.active) {
+                              await setAccount(account.key)
+                              haptics('Light')
+                            }
+                          }}
+                        >
+                          <ContextMenu.ItemTitle children={account.acct} />
+                        </ContextMenu.CheckboxItem>
+                      ))}
+                    </ContextMenu.Content>
+                  </ContextMenu.Root>
+                </>
               )
             default:
               return <Icon name='alert-octagon' size={size} color={color} />
@@ -88,13 +147,13 @@ const ScreenTabs = () => {
       <Tab.Screen
         name='Tab-Me'
         component={TabMe}
-        listeners={({ navigation }) => ({
-          tabLongPress: () => {
-            haptics('Light')
-            navigation.navigate('Tab-Me', { screen: 'Tab-Me-Root' })
-            navigation.navigate('Tab-Me', { screen: 'Tab-Me-Switch' })
-          }
-        })}
+        // listeners={({ navigation }) => ({
+        //   tabLongPress: () => {
+        //     haptics('Light')
+        //     navigation.navigate('Tab-Me', { screen: 'Tab-Me-Root' })
+        //     navigation.navigate('Tab-Me', { screen: 'Tab-Me-Switch' })
+        //   }
+        // })}
       />
     </Tab.Navigator>
   )
