@@ -1,2 +1,3 @@
 tooot-ing愉快！此版本包括以下改进和修复：
+- 长按底部菜单头像快速切换账户
 - 修复投票通知显示
