@@ -1,2 +1,3 @@
 Enjoy toooting! This version includes following improvements and fixes:
+- Long press avatar in tab bar to quickly switch to another account
 - Fix poll notifications wrongly greyed out
